feat: multimodule setting

--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,28 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.4.4'
-    id 'io.spring.dependency-management' version '1.1.7'
-}
+/*  Practice/build.gradle  ─ 루트 전용 */
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+plugins {
+	id 'java-library'                                            // 공통 자바
+	id 'org.springframework.boot' version '3.2.4' apply false   // ★ apply false!
+	id 'io.spring.dependency-management' version '1.1.4'
+}
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
+	sourceCompatibility = '17'
+	targetCompatibility = '17'
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+allprojects {
+	group   = 'com.example'
+	version = '0.0.1-SNAPSHOT'
+
+	repositories {
+		mavenCentral()
+	}
 }
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
+subprojects {
+	/* 공통 테스트 설정 */
+	test {
+		useJUnitPlatform()
+	}
 }
