--- a/spring-boot/src/main/resources/application.yaml
+++ b/spring-boot/src/main/resources/application.yaml
@@ -1,7 +1,20 @@
 spring:
   application:
-    name: my-first-api
+    name: practice-root
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+    driver-class-name: org.h2.Driver
+    username: sa
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: update   # ← 가장 간단한 해결책
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
 
 
 server:
-  port: 8081
+  port: 8080
