--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly  'com.h2database:h2'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
